Update_V1_CI/CD

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,6 @@
 # Konfigurasi GitHub Actions untuk CI/CD
-
 name: IaC Security Audit
-on: [pull_request]
+on: [push, pull_request]
 jobs:
   audit:
     runs-on: ubuntu-latest
